cart gap fix

--- a/frontend/assets/css/Policy.css
+++ b/frontend/assets/css/Policy.css
@@ -74,6 +74,7 @@ body {
 	justify-content: center;
 	color: black;
 	transition: 0.3s ease;
+	gap: 20px;
 }
 
 #produktet {
